buttons collapse when switching to another mode and fixed doctor search

--- a/src/main/resources/edu/wpi/N/css/newMapDisplay.css
+++ b/src/main/resources/edu/wpi/N/css/newMapDisplay.css
@@ -39,6 +39,8 @@
 }
 
 .label {
+    -fx-text-alignment: center;
     -fx-text-fill: #E6EBF2;
-    -fx-font-size: 15;
+    -fx-font-size: 24;
+    -fx-background-radius: 25px;
 }
